일본어 2차 번역 ( 번역 안 된 부분 or 번역이 이상한 부분 )

--- a/lang/lang.xml
+++ b/lang/lang.xml
@@ -45,7 +45,7 @@
 	<item name="list_target_item">
 		<value xml:lang="ko"><![CDATA[대상 항목]]></value>
 		<value xml:lang="en"><![CDATA[Target Item]]></value>
-		<value xml:lang="jp"><![CDATA[ターゲットアイテム]]></value>
+		<value xml:lang="jp"><![CDATA[対象項目]]></value>
 		<value xml:lang="zh-CN"><![CDATA[备选项]]></value>
 		<value xml:lang="zh-TW"><![CDATA[目標項目]]></value>
 		<value xml:lang="tr"><![CDATA[Hedef Parça]]></value>
@@ -237,7 +237,7 @@
 	<item name="about_use_anonymous">
 		<value xml:lang="ko"><![CDATA[글쓴이의 정보를 없애고 익명으로 게시판 사용을 할 수 있게 합니다. 스킨설정에서 글쓴이 정보등을 보이지 않도록 하시면 더욱 유용합니다. 추가설정의 문서 히스토리 사용이 꺼져있지 않으면 문서 수정시 작성자가 표시될 수 있습니다.]]></value>
 		<value xml:lang="en"><![CDATA[Make this board into an anonymous board by hiding the author's information. <strong>Please turn off history at additional setup. If not, editing document might show the author's info.</strong>]]></value>
-		<value xml:lang="jp"><![CDATA[匿名掲示板として活用出来ます。スキンの設定で「登録者の情報を表示しない」の設定をおすすめします。]]></value>
+		<value xml:lang="jp"><![CDATA[匿名掲示板として活用出来ます。スキン設定で「登録者の情報を表示しない」の設定をおすすめします。追加設定でのドキュメントヒストリー使用機能がオフにされてない場合、書き込みを修正した際に作成者が表示されます。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[글쓴이의 정보를 없애고 익명으로 게시판 사용을 할 수 있게 합니다. 스킨설정에서 글쓰인 정보등을 보이지 않도록 하시면 더욱 유용합니다]]></value>
 		<value xml:lang="zh-TW"><![CDATA[討論板可使用匿名功能。可在面板設定中設置隱藏作者的資料。 ]]></value>
 		<value xml:lang="fr"><![CDATA[글쓴이의 정보를 없애고 익명으로 게시판 사용을 할 수 있게 합니다. 스킨설정에서 글쓰인 정보등을 보이지 않도록 하시면 더욱 유용합니다]]></value>
@@ -249,7 +249,7 @@
 	<item name="about_board">
 		<value xml:lang="ko"><![CDATA[게시판을 생성하고 관리할 수 있습니다.]]></value>
 		<value xml:lang="en"><![CDATA[This module is for creating and managing boards.]]></value>
-		<value xml:lang="jp"><![CDATA[掲示板の生成、および管理するモジュールです。]]></value>
+		<value xml:lang="jp"><![CDATA[掲示板の作成、および管理するモジュールです。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[可生成及管理版面的模块。]]></value>
 		<value xml:lang="zh-TW"><![CDATA[可建立及管理討論板的模組。]]></value>
 		<value xml:lang="fr"><![CDATA[Ce module se sert à créer et à administrer des Panneaux d'Affichage.]]></value>
@@ -273,7 +273,7 @@
 	<item name="about_secret">
 		<value xml:lang="ko"><![CDATA[게시판 및 댓글의 비밀글 사용할 수 있도록 합니다.]]></value>
 		<value xml:lang="en"><![CDATA[Users will be able to write secret articles or comments.]]></value>
-		<value xml:lang="jp"><![CDATA[掲示板およびコメントの非公開を出来るようにします。]]></value>
+		<value xml:lang="jp"><![CDATA[掲示板およびコメントの非公開機能が使用できるようになります。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[设置主题及评论当中使用密帖与否。]]></value>
 		<value xml:lang="zh-TW"><![CDATA[可用於討論板或回覆時選擇是否使用。]]></value>
 		<value xml:lang="es"><![CDATA[Boletín y los comentarios de bimilgeul utilizar.]]></value>
@@ -283,7 +283,7 @@
 	<item name="about_admin_mail">
 		<value xml:lang="ko"><![CDATA[글이나 댓글이 등록될때 등록된 메일주소로 메일이 발송됩니다. 콤마(,)로 연결시 다수의 메일주소로 발송할 수 있습니다.]]></value>
 		<value xml:lang="en"><![CDATA[A mail will be sent when an article or comment is submitted. Multiple mails can be sent with commas(,).]]></value>
-		<value xml:lang="jp"><![CDATA[書き込みやコメントが掲載される時、登録メールアドレス宛にメールが送信されます。  複数のメールアドレスへ送信する場合は「,」(半額コンマ)区切りで登録して下さい。]]></value>
+		<value xml:lang="jp"><![CDATA[書き込みやコメントが登録される時、登録メールアドレス宛にメールが送信されます。  複数のメールアドレスへ送信する場合は「,」(半額コンマ)区切りで登録して下さい。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[有新的主题或评论时，将自动发电子邮件来通知管理员。 多数电子邮件由逗号(,)来分隔。]]></value>
 		<value xml:lang="zh-TW"><![CDATA[有新的主題或評論時，將自動發電子郵件來通知管理員。 多數電子郵件由逗號(,)區隔。]]></value>
 		<value xml:lang="fr"><![CDATA[Un message éléctronique sera envoyé à l'adresse inscrite quand un article ou commentaire se soumet.  On peut inscrire multiple adresses délimité par les virgules.]]></value>
@@ -295,7 +295,7 @@
 	<item name="about_list_config">
 		<value xml:lang="ko"><![CDATA[게시판의 목록형식 사용시 원하는 항목들로 배치를 할 수 있습니다. 단 스킨에서 지원하지 않는 경우 불가능합니다.]]></value>
 		<value xml:lang="en"><![CDATA[If using list-style skin, you may arrange items to display. However, this feature might not be availble for non-official skins. If you double-click target items and display items, then you can add / remove them]]></value>
-		<value xml:lang="jp"><![CDATA[掲示板スタイルが「リスト型」の場合、好きな列の項目配置・表示が出来ます。 ただし、スキンによってはサポートしない場合もあります。 ターゲットアイテム／表示アイテムをダブルクリックすると追加・削除が出来ます。]]></value>
+		<value xml:lang="jp"><![CDATA[掲示板スタイルが「リスト型」の場合、好きな項目の配置・表示ができます。 ただし、スキンによってはサポートしない場合もあります。 ターゲットアイテム／表示アイテムをダブルクリックすると追加・削除が出来ます。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[设置使用目录型目录页面时要显示的项目。 前提是使用的皮肤也支持此功能。 添加/删除项目，双击备选项/显示项即可。]]></value>
 		<value xml:lang="zh-TW"><![CDATA[可以放置想要的項目種類。 當所使用的面板支援此功能時才會正常實現。 對目標項目/顯示項目中的物件按兩下可新增或移除。]]></value>
 		<value xml:lang="fr"><![CDATA[게시판의 목록형식 사용시 원하는 항목들로 배치를 할 수 있습니다. 단 스킨에서 지원하지 않는 경우 지원되지 않을 수 있습니다 대상항목/ 표시항목의 항목을 더블클릭하면 추가/ 제거가 됩니다.]]></value>
@@ -307,7 +307,7 @@
 	<item name="about_use_status">
 		<value xml:lang="ko"><![CDATA[글 작성 시 선택할 수 있는 상태를 지정해주세요.]]></value>
 		<value xml:lang="en"><![CDATA[Please select status that can be selected when write article.]]></value>
-		<value xml:lang="jp"><![CDATA[書き込みを投稿する時に選択することができる状態を指定してください。]]></value>
+		<value xml:lang="jp"><![CDATA[書き込みを登録する際に選択できる状態を指定してください。]]></value>
 	</item>
 	<item name="msg_not_enough_point">
 		<value xml:lang="ko"><![CDATA[포인트가 부족합니다]]></value>
@@ -321,7 +321,7 @@
 	<item name="write_comment">
 		<value xml:lang="ko"><![CDATA[댓글 쓰기]]></value>
 		<value xml:lang="en"><![CDATA[Write a comment]]></value>
-		<value xml:lang="jp"><![CDATA[コメントを投稿]]></value>
+		<value xml:lang="jp"><![CDATA[コメントする]]></value>
 		<value xml:lang="zh-TW"><![CDATA[發表評論]]></value>
 		<value xml:lang="tr"><![CDATA[Yorum Yaz]]></value>
 	</item>
@@ -368,11 +368,11 @@
 	<item name="about_protect_content">
 		<value xml:lang="ko"><![CDATA[작성된 글에 댓글이 작성된 경우 글 작성자는 해당 글을 수정하거나 삭제 할 수 없습니다.]]> </value>
 		<value xml:lang="en"><![CDATA[If there is comment on document, document's owner cannot modify or delete that.]]></value>
-		<value xml:lang="jp"><![CDATA[書き込みにコメントが投稿された場合、書き込みの作成者は書き込みの修正及び削除が出来ません。]]> </value>
+		<value xml:lang="jp"><![CDATA[書き込みにコメントが登録された場合、書き込みの作成者は書き込みの修正及び削除が出来ません。]]> </value>
 	</item>
 	<item name="msg_protect_content">
 		<value xml:lang="ko"><![CDATA[댓글이 작성된 게시물의 글을 수정 또는 삭제 할 수 없습니다.]]></value>
 		<value xml:lang="en"><![CDATA[Cannot modify or delete document. Because there is comments.]]></value>
-		<value xml:lang="jp"><![CDATA[コメントが投稿された書き込みの修正及び削除は禁じられています。]]></value>
+		<value xml:lang="jp"><![CDATA[コメントが登録された書き込みの修正及び削除は禁じられています。]]></value>
 	</item>
 </lang>
