--- a/lang/lang.xml
+++ b/lang/lang.xml
@@ -54,7 +54,7 @@
 	<item name="list_display_item">
 		<value xml:lang="ko"><![CDATA[표시 항목]]></value>
 		<value xml:lang="en"><![CDATA[Display Item]]></value>
-		<value xml:lang="jp"><![CDATA[表示アイテム]]></value>
+		<value xml:lang="jp"><![CDATA[表示項目]]></value>
 		<value xml:lang="zh-CN"><![CDATA[显示项]]></value>
 		<value xml:lang="zh-TW"><![CDATA[顯示項目]]></value>
 		<value xml:lang="tr"><![CDATA[Parçayı Göster]]></value>
@@ -79,7 +79,7 @@
 	<item name="last_post">
 		<value xml:lang="ko"><![CDATA[최종 글]]></value>
 		<value xml:lang="en"><![CDATA[Last post]]></value>
-		<value xml:lang="jp"><![CDATA[最新投稿]]></value>
+		<value xml:lang="jp"><![CDATA[最後の書き込み]]></value>
 		<value xml:lang="zh-TW"><![CDATA[最新發表]]></value>
 		<value xml:lang="tr"><![CDATA[Son Gönderi]]></value>
 		<value xml:lang="vi"><![CDATA[Bài gửi trước]]></value>
@@ -202,7 +202,7 @@
 	<item name="about_layout_setup">
 		<value xml:lang="ko"><![CDATA[블로그의 레이아웃 코드를 직접 수정할 수 있습니다. 위젯 코드를 원하는 곳에 삽입하시거나 관리하세요]]></value>
 		<value xml:lang="en"><![CDATA[You can manually modify board layout code. Insert or manage the widget code anywhere you want]]></value>
-		<value xml:lang="jp"><![CDATA[ブログのレイアウトのコードを直接修正します。ウィジェットコードを好きなところに入力、又は管理して下さい。]]></value>
+		<value xml:lang="jp"><![CDATA[ブログのレイアウトのコードを直接修正します。ウィジェットコードを好きなところに入力、または管理してください。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[可直接编辑博客布局代码。可以把控件代码插入到您喜欢的位置。]]></value>
 		<value xml:lang="zh-TW"><![CDATA[可直接編輯部落格版面設計原始碼。可把 Widget 原始碼插入到您喜歡的位置。]]></value>
 		<value xml:lang="fr"><![CDATA[Vous pouvez manuellement modifier le code de Mise en Page du blogue. Insérez ou administrez le code de Gadget n'importe où vous voulez.]]></value>
@@ -214,7 +214,7 @@
 	<item name="about_board_category">
 		<value xml:lang="ko"><![CDATA[분류를 만들 수 있습니다. 분류가 오동작을 할 경우 캐시파일 재생성을 수동으로 해주시면 해결이 될 수 있습니다.]]></value>
 		<value xml:lang="en"><![CDATA[You can make board categories. When board category is broken, try rebuilding the cache file manually.]]></value>
-		<value xml:lang="jp"><![CDATA[ブログのカテゴリを作成します。 ブログのカテゴリが誤作動する場合、「キャッシュファイルの再生性」を手動で行うことで解決出来ます。]]></value>
+		<value xml:lang="jp"><![CDATA[ブログのカテゴリを作成します。 ブログのカテゴリが誤作動する場合、「キャッシュファイルの再生性」を手動で行うことで解決できます。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[可以添加/删除分类项 分类有异常情况时，可以尝试重新生成缓冲文件。]]></value>
 		<value xml:lang="zh-TW"><![CDATA[可以新增/刪除分類項目 分類有異常情況時，可以嘗試重新建立暫存檔。]]></value>
 		<value xml:lang="fr"><![CDATA[Vous pouvez créer des catégories de Panneau d'Affichage. Quand la catégorie d'affichage est cassé, essayez manuellement rétablir l'antémémoire du fichier.]]></value>
@@ -237,7 +237,7 @@
 	<item name="about_use_anonymous">
 		<value xml:lang="ko"><![CDATA[글쓴이의 정보를 없애고 익명으로 게시판 사용을 할 수 있게 합니다. 스킨설정에서 글쓴이 정보등을 보이지 않도록 하시면 더욱 유용합니다. 추가설정의 문서 히스토리 사용이 꺼져있지 않으면 문서 수정시 작성자가 표시될 수 있습니다.]]></value>
 		<value xml:lang="en"><![CDATA[Make this board into an anonymous board by hiding the author's information. <strong>Please turn off history at additional setup. If not, editing document might show the author's info.</strong>]]></value>
-		<value xml:lang="jp"><![CDATA[匿名掲示板として活用出来ます。スキン設定で「登録者の情報を表示しない」の設定をおすすめします。追加設定でのドキュメントヒストリー使用機能がオフにされてない場合、書き込みを修正した際に作成者が表示されます。]]></value>
+		<value xml:lang="jp"><![CDATA[匿名掲示板として活用できます。スキン設定で「登録者の情報を表示しない」の設定をおすすめします。追加設定でのドキュメントヒストリー使用機能がオフにされていない場合、書き込みを修正した際に作成者が表示されます。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[글쓴이의 정보를 없애고 익명으로 게시판 사용을 할 수 있게 합니다. 스킨설정에서 글쓰인 정보등을 보이지 않도록 하시면 더욱 유용합니다]]></value>
 		<value xml:lang="zh-TW"><![CDATA[討論板可使用匿名功能。可在面板設定中設置隱藏作者的資料。 ]]></value>
 		<value xml:lang="fr"><![CDATA[글쓴이의 정보를 없애고 익명으로 게시판 사용을 할 수 있게 합니다. 스킨설정에서 글쓰인 정보등을 보이지 않도록 하시면 더욱 유용합니다]]></value>
@@ -261,7 +261,7 @@
 	<item name="about_consultation">
 		<value xml:lang="ko"><![CDATA[상담 기능은 관리권한이 없는 회원은 자신이 쓴 글만 보이도록 하는 기능입니다. 단 상담기능 사용시 비회원 글쓰기는 자동으로 금지됩니다.]]></value>
 		<value xml:lang="en"><![CDATA[Non-administrator members would see their own articles. Non-members would not be able to write articles when using consultation.]]></value>
-		<value xml:lang="jp"><![CDATA[相談機能とは、管理権限のない会員に本人の書き込みだけを表示する機能です。但し、相談機能を使用する際は、非会員の書き込みは自動的に禁止されます。]]></value>
+		<value xml:lang="jp"><![CDATA[相談機能とは、管理権限のない会員に本人の書き込みだけを表示する機能です。ただし、相談機能を使用する際は、非会員の書き込みは自動的に禁止されます。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[咨询功能是指除有管理权限的会员以外，其他会员只能浏览自己发表的主题。使用咨询功能时系统将自动禁止非会员的发表主题权限。]]></value>
 		<value xml:lang="zh-TW"><![CDATA[咨詢功能是指除有管理權限的會員以外，其他會員只能瀏覽自己發表的主題。使用咨詢功能時系統將自動禁止非會員的發表主題權限。]]></value>
 		<value xml:lang="fr"><![CDATA[Les membres non-administratifs verront seulement les ariticles d'eux-même. Non-membres ne pourraient pas écrire des articles quand la Consultation est appliqué.]]></value>
@@ -283,7 +283,7 @@
 	<item name="about_admin_mail">
 		<value xml:lang="ko"><![CDATA[글이나 댓글이 등록될때 등록된 메일주소로 메일이 발송됩니다. 콤마(,)로 연결시 다수의 메일주소로 발송할 수 있습니다.]]></value>
 		<value xml:lang="en"><![CDATA[A mail will be sent when an article or comment is submitted. Multiple mails can be sent with commas(,).]]></value>
-		<value xml:lang="jp"><![CDATA[書き込みやコメントが登録される時、登録メールアドレス宛にメールが送信されます。  複数のメールアドレスへ送信する場合は「,」(半額コンマ)区切りで登録して下さい。]]></value>
+		<value xml:lang="jp"><![CDATA[書き込みやコメントが登録される時、登録メールアドレス宛にメールが送信されます。  複数のメールアドレスへ送信する場合は「,」(半額コンマ)区切りで登録してください。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[有新的主题或评论时，将自动发电子邮件来通知管理员。 多数电子邮件由逗号(,)来分隔。]]></value>
 		<value xml:lang="zh-TW"><![CDATA[有新的主題或評論時，將自動發電子郵件來通知管理員。 多數電子郵件由逗號(,)區隔。]]></value>
 		<value xml:lang="fr"><![CDATA[Un message éléctronique sera envoyé à l'adresse inscrite quand un article ou commentaire se soumet.  On peut inscrire multiple adresses délimité par les virgules.]]></value>
@@ -295,7 +295,7 @@
 	<item name="about_list_config">
 		<value xml:lang="ko"><![CDATA[게시판의 목록형식 사용시 원하는 항목들로 배치를 할 수 있습니다. 단 스킨에서 지원하지 않는 경우 불가능합니다.]]></value>
 		<value xml:lang="en"><![CDATA[If using list-style skin, you may arrange items to display. However, this feature might not be availble for non-official skins. If you double-click target items and display items, then you can add / remove them]]></value>
-		<value xml:lang="jp"><![CDATA[掲示板スタイルが「リスト型」の場合、好きな項目の配置・表示ができます。 ただし、スキンによってはサポートしない場合もあります。 ターゲットアイテム／表示アイテムをダブルクリックすると追加・削除が出来ます。]]></value>
+		<value xml:lang="jp"><![CDATA[掲示板スタイルが「リスト型」の場合、好きな項目の配置・表示ができます。 ただし、スキンによってはサポートしない場合もあります。 ターゲットアイテム／表示アイテムをダブルクリックすると追加・削除ができます。]]></value>
 		<value xml:lang="zh-CN"><![CDATA[设置使用目录型目录页面时要显示的项目。 前提是使用的皮肤也支持此功能。 添加/删除项目，双击备选项/显示项即可。]]></value>
 		<value xml:lang="zh-TW"><![CDATA[可以放置想要的項目種類。 當所使用的面板支援此功能時才會正常實現。 對目標項目/顯示項目中的物件按兩下可新增或移除。]]></value>
 		<value xml:lang="fr"><![CDATA[게시판의 목록형식 사용시 원하는 항목들로 배치를 할 수 있습니다. 단 스킨에서 지원하지 않는 경우 지원되지 않을 수 있습니다 대상항목/ 표시항목의 항목을 더블클릭하면 추가/ 제거가 됩니다.]]></value>
@@ -358,7 +358,7 @@
 	<item name="about_hide_category">
 		<value xml:lang="ko"><![CDATA[임시로 분류를 사용하지 않으려면 체크하세요.]]></value>
 		<value xml:lang="en"><![CDATA[You can disable a category feature.]]></value>
-		<value xml:lang="ko"><![CDATA[臨時にカテゴリー機能を使用しない場合、チェックして下さい。]]></value>
+		<value xml:lang="ko"><![CDATA[臨時にカテゴリー機能を使用しない場合、チェックしてください。]]></value>
 	</item>
 	<item name="protect_content">
 		<value xml:lang="ko"><![CDATA[글 보호 기능]]></value>
@@ -368,11 +368,11 @@
 	<item name="about_protect_content">
 		<value xml:lang="ko"><![CDATA[작성된 글에 댓글이 작성된 경우 글 작성자는 해당 글을 수정하거나 삭제 할 수 없습니다.]]> </value>
 		<value xml:lang="en"><![CDATA[If there is comment on document, document's owner cannot modify or delete that.]]></value>
-		<value xml:lang="jp"><![CDATA[書き込みにコメントが登録された場合、書き込みの作成者は書き込みの修正及び削除が出来ません。]]> </value>
+		<value xml:lang="jp"><![CDATA[書き込みにコメントが登録された場合、書き込みの作成者は書き込みの修正、または削除ができません。]]> </value>
 	</item>
 	<item name="msg_protect_content">
 		<value xml:lang="ko"><![CDATA[댓글이 작성된 게시물의 글을 수정 또는 삭제 할 수 없습니다.]]></value>
 		<value xml:lang="en"><![CDATA[Cannot modify or delete document. Because there is comments.]]></value>
-		<value xml:lang="jp"><![CDATA[コメントが登録された書き込みの修正及び削除は禁じられています。]]></value>
+		<value xml:lang="jp"><![CDATA[コメントが登録された書き込みは修正、または削除が禁止されています。]]></value>
 	</item>
 </lang>
